--- a/view/addCategories.ejs
+++ b/view/addCategories.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tables</title>
+    <title>philosophy</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="/css/tailwind.output.css" />
@@ -14,6 +14,7 @@
 
 <body>
     <div class="flex h-screen bg-gray-50 dark:bg-gray-900" :class="{ 'overflow-hidden': isSideMenuOpen}">
+        <!-- Desktop sidebar -->
         <aside class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0">
             <div class="py-4 text-gray-500 dark:text-gray-400">
                 <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" href="/dashboard">
@@ -55,7 +56,7 @@
                                 stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                                 <path d="M4 6h16M4 10h16M4 14h16M4 18h16"></path>
                             </svg>
-                            <span class="ml-4">page article</span>
+                            <span class="ml-4">page article<article></article></span>
                         </a>
                     </li>
                 </ul>
@@ -67,7 +68,7 @@
                                 stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                                 <path d="M4 6h16M4 10h16M4 14h16M4 18h16"></path>
                             </svg>
-                            <span class="ml-4">page commontaire</span>
+                            <span class="ml-4">page commentaire</span>
                         </a>
                     </li>
                 </ul>
@@ -119,6 +120,8 @@
                     </li>
                 </ul>
                 <ul>
+
+
                     <li class="relative px-6 py-3">
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                             href="/categorie">
@@ -129,6 +132,7 @@
                             <span class="ml-4">page categorie</span>
                         </a>
                     </li>
+
                 </ul>
                 <ul>
                     <li class="relative px-6 py-3">
@@ -150,7 +154,7 @@
                                 stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                                 <path d="M4 6h16M4 10h16M4 14h16M4 18h16"></path>
                             </svg>
-                            <span class="ml-4">page commontaire</span>
+                            <span class="ml-4">page commentaire</span>
                         </a>
                     </li>
                 </ul>
@@ -235,8 +239,7 @@
                                 <ul x-transition:leave="transition ease-in duration-150"
                                     x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0"
                                     @click.away="closeNotificationsMenu" @keydown.escape="closeNotificationsMenu"
-                                    class="absolute right-0 w-56 p-2 mt-2 space-y-2 text-gray-600 bg-white border border-gray-100 rounded-md shadow-md dark:text-gray-300 dark:border-gray-700 dark:bg-gray-700"
-                                    aria-label="submenu">
+                                    class="absolute right-0 w-56 p-2 mt-2 space-y-2 text-gray-600 bg-white border border-gray-100 rounded-md shadow-md dark:text-gray-300 dark:border-gray-700 dark:bg-gray-700">
                                 </ul>
                             </template>
                         </li>
@@ -262,91 +265,40 @@
                 </div>
             </header>
             <main class="h-full pb-16 overflow-y-auto">
-                <div class="container grid px-6 mx-auto">
-                    <div class="flex justify-between">
-                        <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
-                            page commentaire
-                        </h2>
-                       <a href="/addcomment"><button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-64 h-8 mt-6">add comment </button></a> 
-                    </div>
-                    
-                                
-                               
-                    <div class="w-full overflow-hidden rounded-lg shadow-xs">
-                        <div class="w-full overflow-x-auto">
-                            <table class="w-full whitespace-no-wrap">
-                                <thead>
-                                    <tr
-                                        class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
-                                        <th class="px-4 py-3">title Article</th>
-                                        <th class="px-4 py-3">content</th>
-                                        <th class="px-4 py-3">name</th>
-                                        <th class="px-4 py-3">email</th>
-                                        <th class="px-4 py-3">date</th>
-                                    </tr>
-                                </thead>
-                                <!-- comment -->
-                                <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
-                                    <!-- comment 1 -->
-                                    <% comments.forEach(function(comment) { %>
-                                    <tr class="text-gray-700 dark:text-gray-400">
-                                        <td class="px-4 py-3">
-                                            <div class="flex items-center text-sm">
-                                                <div>
-                                                    <p class="font-semibold">title Article</p>
-                                                </div>
-                                            </div>
-                                        </td>
-                                        <td class="px-4 py-3 text-sm">
-                                            <%= comment.content %>
-                                        </td>
-                                        <td class="px-4 py-3 text-xs">
-                                            <%= comment.name %>
-                                        </td>
-                                        <td class="px-4 py-3 text-xs">
-                                            <%= comment.email %>
-                                        </td>
-                                        <td class="px-4 py-3 text-xs">
-                                            <%= comment.createdAt %>
-                                        </td>
-                                        <td class="px-4 py-3">
-                                            <div class="flex items-center space-x-4 text-sm">
-                                                <a href="<%=comment.id%>/edit">
-                                                    <button
-                                                    class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 text-purple-600 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray"
-                                                    aria-label="Edit">
-                                                    <svg class="w-5 h-5" aria-hidden="true" fill="currentColor"
-                                                        viewBox="0 0 20 20">
-                                                        <path
-                                                            d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z">
-                                                        </path>
-                                                    </svg>
-                                                </button>
-                                                </a>
-                                                <form action="<%=comment.id%>/delete" method="POST">
-                                                    <button
-                                                        class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 text-purple-600 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray"
-                                                        aria-label="Delete">
-                                                        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor"
-                                                            viewBox="0 0 20 20">
-                                                            <path fill-rule="evenodd"
-                                                                d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
-                                                                clip-rule="evenodd"></path>
-                                                        </svg>
-                                                    </button>
-                                                </form>
-                                            </div>
-                                        </td>
-                                    </tr>
+                <div class="container px-6 mx-auto grid">
+                    <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
+                        Add categorie
+                    </h2>
+                    <form method="POST" action="/addCategories">
+                        <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+                            <label class="block text-sm">
+                                <span class="text-gray-700 dark:text-gray-400">title</span>
+                                <input
+                                    class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+                                    placeholder="add title categorie" name="title" required />
+                            </label>
 
-                                    <% }); %>
-                                    
-                                    
-                                </tbody>
-                                <!-- fin comment -->
-                            </table>
+                            <label class="block mt-4 text-sm">
+                                <span class="text-gray-700 dark:text-gray-400">description</span>
+                                <textarea
+                                    class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-textarea focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray"
+                                    rows="3" placeholder="Enter some long form content." name="description"
+                                    required></textarea>
+                            </label>
+                            <label class="block text-sm">
+                                <span class="text-gray-700 dark:text-gray-400">icon</span>
+                                <input
+                                    class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+                                    name="icon" required />
+                            </label>
+                            <label style="display: flex; justify-content:center">
+                                <button type="submit" class="mt-4 rounded text-white" name="Add"
+                                    style="background-color: rgb(138, 5, 254); padding: 4px 20px; ">
+                                    Add
+                                </button>
+                            </label>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </main>
         </div>
